
@startuml

class RentalSystem <<Singleton>> {
    - Car[] cars
    - Reservation[] reservations
    + addCar(Car) : void
    + removeCar(String) : void
    + createReservation(Car, Customer) : void
    + cancelReservation(String) : void
    + searchCarByMake(String) : Car[]
    + searchCarByModel(String) : Car[]
    + searchCarByYear(String) : Car[]
    + searchCarByLicensePlateNumber(String) : Car
    + searchAvailableCars(Date, Date) : Car[]
}

class Reservation {
    - String id
    - String carId
    - Customer customer
    - Date startDate
    - Date endDate
}

class Car {
    - String id
    - String make
    - String model
    - String year
    - String licensePlateNumber
    - double rentalPricePerDay
    - Reservation[] reservations

    + isCarAvailable() : boolean
    + addReservation(Reservation) : void
}

class Customer {
    - String id
    - String name
    - String address
    - String phoneNumber
    - String email
    - String driverLicenseNumber
}

RentalSystem "1" *--> "*" Car
RentalSystem "1" *--> "*" Reservation
RentalSystem ..> Customer
Reservation *--> Customer

Car "1" *--> "*" Reservation
@enduml
